--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -4,7 +4,8 @@
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
-  display: inline-block;
+  display: block;
+  transform: translateX(550px);
   color: #fff;
   border: 0;
   text-decoration: none;
@@ -14,7 +15,7 @@
   line-height: 24px;
   font-style: normal;
   font-weight: 500;
-  min-width: 180px;
+  width: 180px;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
