--- a/src/components/Searchbar/styles.module.css
+++ b/src/components/Searchbar/styles.module.css
@@ -30,12 +30,12 @@
   overflow: hidden;
 }
 
-.SearchForm-button {
+.SearchFormButton {
   display: inline-block;
   width: 48px;
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
+  /* background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg'); */
   background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
@@ -49,7 +49,7 @@
   opacity: 1;
 }
 
-.SearchForm-button-label {
+.SearchFormButtonLabel {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -61,7 +61,7 @@
   border: 0;
 }
 
-.SearchForm-input {
+.SearchFormInput {
   display: inline-block;
   width: 100%;
   font: inherit;
