correct size of images

--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -12,6 +12,7 @@
 }
 
 .Modal {
-  max-width: calc(100vw - 48px);
-  max-height: calc(100vh - 24px);
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
